--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,6 +16,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
   From William Deegan:
     - Fix yacc tool, not respecting YACC set at time of tool initialization.
+    - Refactor SCons.Tool to move all common shared and loadable module linking logic to SCons.Tool.linkCommon
 
   From Adam Gross:
     - Fix minor bug affecting SCons.Node.FS.File.get_csig()'s usage of the MD5 chunksize.
