test: Pass a correct flag to DVIPDFFLAGS test
Pass '-R2' instead of '-N' as the tested flag to DVIPDFFLAGS test.
Apparently '-N' alone is not a valid flag (as of ghostscript-gpl 9.53.1)
and it causes the test to fail:

  cd . && dvipdf -N foo.dvi foo.pdf
  -N must be between 2 and 4194303
  scons: building terminated because of errors.

It is not even mentioned in the manual page (though looking
at the script, it is passed to gs).  Use '-R2' instead as an arbitrary
documented flag.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,9 @@ NOTE: The 4.0.0 Release of SCons dropped Python 2.7 Support
 
 RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
+  From Michał Górny:
+    - Fix dvipdf test failure due to passing incorrect flag to dvipdf.
+
   From Joseph Brill:
     - Internal MSVC and test updates: Rework the msvc installed versions cache so that it
       is not exposed externally and update external references accordingly.
