Fix occasional test failures when running multiple jobs
The way runtest.py passes the list of fixture directories is racy because it
sets it in os.environ['FIXTURE_DIRS'] and then spawns the subprocess, counting
on Python to start the subprocess before that list is overwritten when spawning
the next directory. At least on Windows, the environment is not copied in
subprocess.run so runtest.py may overwrite the list of fixture directories
with the list for test #2 while the subprocess module is still kicking off
test #1. I was able to easily reproduce this by running the command:
`python runtest.py -j 2 test\MSVC\VSWHERE.py test\AS\ASPPFLAGS.py`
a few times in a row. However, with this fix, that command repeatedly succeeds.

To validate ths fix, I also ran that command with "--xml a.xml" and
"--xml a.xml --nopipefiles" to validate that those other executors worked
correctly.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -33,6 +33,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
   From Adam Gross:
     - Fix minor bug affecting SCons.Node.FS.File.get_csig()'s usage of the MD5 chunksize.
       User-facing behavior does not change with this fix (GH Issue #3726).
+    - Fix occasional test failures caused by not being able to find a file or directory fixture
+      when running multiple tests with multiple jobs.
 
   From Joachim Kuebart:
     - Suppress missing SConscript deprecation warning if `must_exist=False`
