Fix invalid cache state when using SCons interactive mode
SCons.Node.Node.clear() had code to clear cache-related state but it was only
clearing a non-unused variable _calculated_sig. Fix this by clearing the three
variables now used in practice by get_cachedir_bsig() and the functions that it
calls: `cachedir_csig`, `cachesig`, and `contentsig`. Also reset `cached` to 0
because the task scheduler depends on it but doesn't reset it.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -35,6 +35,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       User-facing behavior does not change with this fix (GH Issue #3726).
     - Fix occasional test failures caused by not being able to find a file or directory fixture
       when running multiple tests with multiple jobs.
+    - Fix incorrect cache hits and/or misses when running in interactive mode by having
+      SCons.Node.Node.clear() clear out all caching-related state.
 
   From Joachim Kuebart:
     - Suppress missing SConscript deprecation warning if `must_exist=False`
