--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -71,6 +71,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       MethodWrapper to set up the method the same way env.AddMethod does.
       MethodWrapper moved to Util to avoid a circular import. Fixes #3028.
     - Some Python 2 compatibility code dropped
+    - Rework runtest.py to use argparse for arg handling (was a mix
+      of hand-coded and optparse, with a stated intent to "gradually port")
 
   From Simon Tegelid
     - Fix using TEMPFILE in multiple actions in an action list. Previously a builder, or command
